Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27450

Regression: FileIconProvider misses icons and StandardPixmaps not from system

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.0 Beta 2
    • 5.0.0 Beta 1
    • GUI: Look'n'Feel
    • Mac OS X 10.7 / 10.8, Qt5, Qt Creator 2.6
    • Qt Creator/Windows: 0869a1393835f914e183607977a901b085a60d72 c3b939818af214392505c58b93d5f8df46fa09d8

      the file icon provider doesn't return the icons for the file types, and standard pixmaps look funny (taken from some other style?)

      See attached screen shots

        1. fileiconprovider_qt4.png
          22 kB
          Eike Ziller
        2. fileiconprovider_qt5.png
          22 kB
          Eike Ziller
        3. standardpixmap_qt4.png
          10 kB
          Eike Ziller
        4. standardpixmap_qt5.png
          10 kB
          Eike Ziller
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes