Display proper overlay icons on Windows/Qt 5.

Task-number: QTBUG-27450

Change-Id: I521823dc586c304a5242a79f04489e5bc0fdb702
Reviewed-by: Eike Ziller <eike.ziller@digia.com>