src/plugins/coreplugin/fileiconprovider.cpp
@@ -138,7 +138,7 @@ QIcon FileIconProvider::icon(const QFileInfo &fileInfo) const
         }
     }
     // Get icon from OS.
-#if defined(Q_WS_WIN) || defined(Q_OS_MAC)
+#if defined(Q_OS_WIN) || defined(Q_OS_MAC)
     return QFileIconProvider::icon(fileInfo);
 #else
     // File icons are unknown on linux systems.
